fixed nav on safari

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -52,7 +52,8 @@
 
 .site-navigation {
     display: flex;
-    order: 3;
+    // order: 3;
+    left: 0;
     flex: 2 1 100%;
     justify-content: space-around;
     padding-top: 2%;
